# number-system

./: .gitignore  README.md  todo.txt
CLI/: CMakeLists.txt  main.cpp
CLI/include/: common.hpp  computation.hpp  logger.hpp  navigation.hpp  utility.hpp  validator.hpp
CLI/src/: computation.cpp  main.cpp  navigation.cpp  validator.cpp
CLI/src/core/: computation.cpp  navigation.cpp  utility.cpp  validator.cpp
CLI/src/utils/: logger.cpp
